--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1000px, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./src/index.css">
-  <title>Vue Parcel</title>
+  <title>MediaWiki Skins</title>
 </head>
 <body>
   <div id="app"></div>
-
   <!-- built files will be auto injected -->
   <script src="./src/main.js"></script>
 </body>
