Move header out of App

--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
   <meta name="viewport" content="width=1000px, initial-scale=0.33">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./src/index.css">
-  <title>MediaWiki Skins</title>
+  <title>Wikimedia Skins Lab</title>
+  <style type="text/css">
+  body {
+    width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  header {
+    padding: 8px;
+    margin: 0;
+  }
+
+  header span {
+    font-size: 0.8em;
+  }
+
+  header h1 {
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+
+  header a {
+    text-decoration: none;
+    color:yellow;
+  }
+  </style>
 </head>
 <body>
+  <header>
+    <a href="#/">
+      <h1>MediaWiki skins</h1>
+    </a>
+    <span>A place to find the perfect skin for your mediawiki.</span>
+  </header>
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <script src="./src/main.js"></script>
