Rename Wikimedia Skin Labs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <header>
     <a href="#/">
-      <h1>MediaWiki skins</h1>
+      <h1>Wikimedia Skins Lab</h1>
     </a>
     <span>A place to find the perfect skin for your mediawiki.</span>
   </header>
