--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     margin: 0 auto;
     text-align: center;
   }
+
   header {
     background: #f1d800;
     padding: 8px;
@@ -38,6 +39,13 @@
   header a {
     text-decoration: none;
     color: #c24cbf;
+  }
+
+  /* enable "i have a big monitor mode" */
+  @media (min-width: 1920px) {
+    body {
+      width: 90%;
+    }
   }
   </style>
 </head>
