--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=1000px, initial-scale=0.33">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./src/index.css">
+  <script src="node_modules/less/dist/less.min.js"></script>
   <title>Wikimedia Skins Lab</title>
   <style type="text/css">
   body {
