--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1000px, initial-scale=0.33">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./src/index.css">
+  <link rel="stylesheet" href="./src/index.less">
   <title>Wikimedia Skins Lab</title>
   <style type="text/css">
   body {
