--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 </head>
 <body>
   <header>
-    <a class="logo" href="#/">
-      <img src="./assets/logo.png" height="100" width="100">
-      <h1>Wikimedia Skins Lab</h1>
-    </a>
-    <span>A place to find the perfect skin for your mediawiki.</span>
+    <a href="#/">
+			<h1>Skins</h1>
+		</a>
+    <div>
+      <span>A place to find the perfect skin for your mediawiki made by <a href="https://jdlrobson.com">Jon Robson</a> and <a href="https://littledailydose.com/">Linz Lim.</a></span>
+      <img src="./assets/petals.svg" alt="mediawiki logo" width="45" height="45">
+    </div>
   </header>
-  <div id="app"></div>
+  <main id="app"></main>
+  <nav>
+		<a id="explore" href="#/explore">explore</a>
+		<a id="create" href="#/add">create</a>
+	</nav>
   <!-- built files will be auto injected -->
   <script src="node_modules/less/dist/less.min.js"></script>
   <script src="./src/main.js"></script>
