Change home page copy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Skins</h1>
 		</a>
     <div>
-      <span>A place to find the perfect skin for your mediawiki made by <a href="https://jdlrobson.com">Jon Robson</a> and <a href="https://littledailydose.com/">Linz Lim.</a></span>
+      <span><a href="https://jdlrobson.com">Jon Robson</a> and <a href="https://littledailydose.com/">Linz Lim</a> made a place to find the perfect skin for your MediaWiki.</span>
       <img src="./assets/petals.svg" alt="mediawiki logo" width="45" height="45">
     </div>
   </header>
