Update links in navigation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Skins</h1>
 		</a>
     <div>
-      <span><a href="https://jdlrobson.com">Jon Robson</a> and <a href="https://littledailydose.com/">Linz Lim</a> made a place to find the perfect skin for your MediaWiki</span>
+      <span><a href="https://jdlrobson.com">Jon Robson</a> and <a href="https://littledailydose.com/contact">Linz Lim</a> made a place to find the perfect skin for your <a href="https://www.mediawiki.org">MediaWiki</a></span>
       <img src="./assets/petals.svg" alt="mediawiki logo" width="45" height="45">
     </div>
   </header>
