Add github badge

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
   <!-- built files will be auto injected -->
   <script src="node_modules/less/dist/less.min.js"></script>
   <script src="./src/main.js"></script>
+  <a href="https://github.com/jdlrobson/skins.wmflabs.org" title="Report problems and submit patches on Github"
+    class="github-badge">
+    <img src="./assets/github.png" width="32" height="32" alt="Github repository for this site"></a>
 </body>
 </html>
