--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
   <a href="https://github.com/jdlrobson/skins.wmflabs.org" title="Report problems and submit patches on Github"
     class="github-badge">
     <img src="./assets/github.png" width="32" height="32" alt="Github repository for this site"></a>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JMFXH19XWD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-JMFXH19XWD');
+  </script>
 </body>
 </html>
