--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</nav>
   <!-- built files will be auto injected -->
   <script src="node_modules/less/dist/less.min.js"></script>
-  <script src="./src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
   <a href="https://github.com/jdlrobson/skins.wmflabs.org" title="Report problems and submit patches on Github"
     class="github-badge">
     <img src="./assets/github.png" width="32" height="32" alt="Github repository for this site"></a>
