Remove tab components in favor of Codex

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=1400px, initial-scale=0.22">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./src/index.less">
+  <link rel="stylesheet" href="./node_modules/@wikimedia/codex/dist/codex.style.css">
   <title>Wikimedia Skins Lab</title>
 </head>
 <body>
