--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=1400px, initial-scale=0.22">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./src/index.less">
+  <link rel="stylesheet" href="./node_modules/@wikimedia/codex/dist/codex.style.css">
   <title>Wikimedia Skins Lab</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
 	</nav>
   <!-- built files will be auto injected -->
   <script src="node_modules/less/dist/less.min.js"></script>
-  <script src="./src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
   <a href="https://github.com/jdlrobson/skins.wmflabs.org" title="Report problems and submit patches on Github"
     class="github-badge">
     <img src="./assets/github.png" width="32" height="32" alt="Github repository for this site"></a>
